# pathtracer-rs

./: Cargo.toml
src/: camera.rs  color.rs  geometry.rs  image_shader.wgsl  light.rs  main.rs  material.rs  object.rs  raytracer.rs  scene.rs  shader.wgsl  state.rs  world.rs
src/renderer/: mod.rs  renderer.rs  state.rs  texture.rs
