[package]
name = "pathtracer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit ={ version = "0.28"}
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
image = "0.24"
rand = "0.8"
tokio = { version = "1.11", features = ["full"] }
bytemuck = {version = "1.12", features = ["derive"]}