[package]
name = "pathtracer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit ={ version = "0.28"}
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
image = "0.24.7"
rand = "0.8"
rand_pcg = "0.3.1"
tokio = { version = "1.11", features = ["full"] }
bytemuck = {version = "1.12", features = ["derive"]}
anyhow = "1.0"
nalgebra = "0.32.3"
lazy_static = "1.4"
human-panic = {version = "*", default-features = false}
rayon = "1.5"
bvh = "0.7.2"

[features]
cli_mode = []